# pilotproject-hearing-loss

./: .env.local.template  .gitignore  478.txt  PIPELINE.md  README.md  README_dlm.md  README_whisper_metrics.md  dataset_integrity_report.json  pyproject.toml
configs/: fmatrix_training_config.yaml
info-material/: 20260126-analysis.md
logs/: mask_audio_1362273.err  mask_audio_1362273.out  mask_audio_1362276.err  mask_audio_1362276.out
scripts/: DataSet2LogMel.py  DataSet2LogMel.sbatch  DataSet2LogMelBatch.py  analyse_with_whisper.py  analyse_with_whisper.sbatch  apply_all_masks.py  apply_all_masks.sbatch  download_commonvoice.py  evaluate_mald.py  evaluate_mald_smatrix.py  evaluate_mald_smatrix.sbatch  evaluate_matrices.py  extract_raw_data.py  extract_raw_data.sbatch  extract_word_audio.py  extract_word_audio.sbatch  forced_alignment.py  forced_alignment.sbatch  generate_mald_cvectors.py  generate_mald_cvectors.sbatch  generate_smatrix.py  generate_spectrograms.py  generate_spectrograms.sbatch  mask_audio.py  mask_audio.sbatch  mask_word_audio.py  mask_word_audio.sbatch  merge_mald_cosine.py  merge_mald_cosine.sbatch  predict_smatrix_mald.py  predict_smatrix_mald.sbatch  run_mald_analysis.sh  train_fmatrix_incremental.py  train_fmatrix_incremental.sbatch  train_whisper.py  train_whisper.sbatch  transcribe_single_word.py  visualize_learning_curves.py
scripts/_deprecated/: mask_audio.py
scripts/modules/: __init__.py  audio.py
scripts/slurm/: test_cv24_mask_audio.sh
scripts/utils/: __init__.py  cv24_loader.py  data_utils.py  spectrogram_utils.py
