[project]
name = "hearingloss"
version = "0.1.0"
description = "KI-based speech recognition as a method for investigating hearing loss"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.6.0", # HuggingFace datasets library (downgraded for script compatibility)
    "librosa>=0.10.0", # Audio processing
    "soundfile>=0.12.0", # Audio file I/O
    "torch>=2.0.0", # For tensor operations
    "huggingface-hub>=0.16.0", # HuggingFace Hub client
    "psutil>=7.1.0", # System and process utilities
    "transformers>=4.57.1", # HuggingFace transformers (Whisper models)
    "torchaudio>=2.8.0", # Audio processing with PyTorch
    "numpy>=1.24.0", # Numerical computing
    "tqdm>=4.65.0", # Progress bars
    "evaluate>=0.4.0", # For WER computation
    "jiwer>=3.0.0", # Required for WER metric computation
    "accelerate>=0.26.0", # Required for Trainer with PyTorch
    "tensorboard>=2.0.0", # Required for TensorBoard logging
]

[tool.uv]
package = false  # This is a script/application project, not a library

[tool.uv.sources]
