[project]
name = "hearingloss"
version = "0.1.0"
description = "KI-based speech recognition as a method for investigating hearing loss"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.6.0", # HuggingFace datasets library (downgraded for script compatibility)
    "librosa>=0.10.0", # Audio processing
    "soundfile>=0.12.0", # Audio file I/O
    "torch>=2.0.0", # For tensor operations
    "huggingface-hub>=0.16.0", # HuggingFace Hub client
    "psutil>=7.1.0", # System and process utilities
    "transformers>=4.57.1", # HuggingFace transformers (Whisper models)
    "torchaudio>=2.8.0", # Audio processing with PyTorch
    "numpy>=1.24.0", # Numerical computing
    "tqdm>=4.65.0", # Progress bars
    "evaluate>=0.4.0", # For WER computation
    "jiwer>=3.0.0", # Required for WER metric computation
    "accelerate>=0.26.0", # Required for Trainer with PyTorch
    "tensorboard>=2.0.0", # Required for TensorBoard logging
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "montreal-forced-aligner>=3.3.8",
    "praatio>=6.2.0",
    "fasttext-wheel>=0.9.2", # FastText word embeddings
    "pyyaml>=6.0", # YAML configuration parsing
    "xarray>=2023.6.0", # N-dimensional labeled arrays (for S-matrix storage)
    
    # TEMPORARILY DISABLED (2026-01-23): fasttext and discriminative-lexicon-model require
    # Python.h headers to compile, which are not installed on any cluster compute node.
    # These packages are only needed for Motoki's DLM training (scripts/generate_smatrix.py).
    # To re-enable: ask sysadmin to install python3-dev, or use conda.
    # "fasttext>=0.9.3",
    # "discriminative-lexicon-model",
]

[tool.uv]
package = false  # This is a script/application project, not a library

# TEMPORARILY DISABLED - see note above
# [tool.uv.sources]
# discriminative-lexicon-model = { git = "https://github.com/quantling/discriminative_lexicon_model.git" }
